@@ -20,6 +20,22 @@ begin_import
 import|import static
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|CommonConfigurationKeysPublic
+operator|.
+name|FS_DEFAULT_NAME_KEY
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
 name|junit
 operator|.
 name|Assert
@@ -70,7 +86,27 @@ name|java
 operator|.
 name|io
 operator|.
+name|ByteArrayOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|OutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|PrintStream
 import|;
 end_import
 
@@ -137,6 +173,20 @@ operator|.
 name|fs
 operator|.
 name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|StorageType
 import|;
 end_import
 
@@ -299,6 +349,20 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|base
+operator|.
+name|Charsets
 import|;
 end_import
 
@@ -6012,6 +6076,115 @@ name|shutdown
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testSetSpaceQuotaWhenStorageTypeIsWrong ()
+specifier|public
+name|void
+name|testSetSpaceQuotaWhenStorageTypeIsWrong
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|HdfsConfiguration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|FS_DEFAULT_NAME_KEY
+argument_list|,
+literal|"hdfs://127.0.0.1:8020"
+argument_list|)
+expr_stmt|;
+name|DFSAdmin
+name|admin
+init|=
+operator|new
+name|DFSAdmin
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|ByteArrayOutputStream
+name|err
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|()
+decl_stmt|;
+name|System
+operator|.
+name|setErr
+argument_list|(
+operator|new
+name|PrintStream
+argument_list|(
+name|err
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|args
+init|=
+block|{
+literal|"-setSpaceQuota"
+block|,
+literal|"100"
+block|,
+literal|"-storageType"
+block|,
+literal|"COLD"
+block|,
+literal|"/testDir"
+block|}
+decl_stmt|;
+name|admin
+operator|.
+name|run
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+name|String
+name|errOutput
+init|=
+operator|new
+name|String
+argument_list|(
+name|err
+operator|.
+name|toByteArray
+argument_list|()
+argument_list|,
+name|Charsets
+operator|.
+name|UTF_8
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|errOutput
+operator|.
+name|contains
+argument_list|(
+name|StorageType
+operator|.
+name|getTypesSupportingQuota
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
